デモサイト追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,8 @@
   <body>
     <div class="title">スクロールの世界にようこそ！</div>
     <div class="select">
-      <a href="/gallery">サンプル１</a>
+      <a href="/gallery/demoSite">デモサイト</a>
+      <a href="/gallery">AI Illustration Parallax</a>
     </div>
   </body>
 
