ストーカーアニメーションなど追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,9 @@
     <div class="select">
       <a href="/gallery/demoSite">デモサイト</a>
       <a href="/gallery">AI Illustration Parallax</a>
+      <a href="/gallery/changeBackgroundColor">背景色変化</a>
+      <a href="/gallery/callback">コールバック</a>
+      <a href="/gallery/mouseStalker">ストーカー</a>
     </div>
   </body>
 
