回転モーションなど追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,11 @@
       <a href="/gallery/changeBackgroundColor">背景色変化</a>
       <a href="/gallery/callback">コールバック</a>
       <a href="/gallery/mouseStalker">ストーカー</a>
+      <a href="/gallery/rotate">回転</a>
+      <a href="/gallery/overwrite">overwrite</a>
+      <a href="/gallery/transform">図形の変更一覧</a>
+      <a href="/gallery/slowTween">時間よ止まれ</a>
+      <a href="/gallery/toRepeat">隠してから表示</a>
     </div>
   </body>
 
